# raminstitute

./: .gitignore  .vercelignore  DEPLOYMENT_GUIDE.md  DEVELOPER_CHEATSHEET.md  DOMAIN_INTEGRATION_BRIEF.md  VERCEL_DEPLOY.md  pyproject.toml  vercel.env.example  vercel.json
api/: index.py  requirements.txt
backend/: .env.example  requirements.txt  server.py
backend/tests/: backend_test.py  test_applications.py  test_seo_blog.py
frontend/: .env.example  .gitignore  package.json  tailwind.config.js
frontend/public/: index.html  robots.txt  sitemap.xml
frontend/scripts/: copy-static-pages.js  postbuild.js  prerender.js
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: ExitIntent.jsx  Footer.jsx  LeadForm.jsx  Navbar.jsx  PublicLayout.jsx  StickyCTAs.jsx
frontend/src/data/: seo.js  site.js
frontend/src/lib/: SEO.jsx  analytics.js  api.js  auth.js
frontend/src/pages/: About.jsx  Apply.jsx  Blog.jsx  BlogPost.jsx  CampusLife.jsx  Contact.jsx  CourseDetail.jsx  Courses.jsx  Gallery.jsx  Home.jsx  Placements.jsx  Scholarships.jsx
frontend/src/pages/admin/: AdminApplications.jsx  AdminBlog.jsx  AdminCourses.jsx  AdminLayout.jsx  AdminLeads.jsx  AdminLogin.jsx  AdminOverview.jsx
nursing/: index.html  thankyou.html
nursing/css/: responsive.css  style.css
nursing/javascript/: javascript.js
