[project]
name = "rihm-website"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.110.1",
  "uvicorn==0.25.0",
  "motor==3.3.1",
  "pymongo==4.5.0",
  "dnspython==2.8.0",
  "bcrypt==4.1.3",
  "PyJWT==2.13.0",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.30",
  "email-validator==2.3.0",
  "razorpay==1.4.2",
  "twilio==9.10.9",
  "resend==2.30.1",
]

[tool.vercel]
entrypoint = "api.index:app"
